# pokeapi-fastapi

./: .env.example  .flake8  .gitignore  Jenkinsfile  README.md  manage.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 304cc25c0c86_added_initial_models.py  a5eadabd11d3_added_initial_models.py  fffad635dda5_added_initial_models.py
compose/base/: docker-compose.yml
compose/tests/: Dockerfile  docker-compose.yml
compose/with_db/: Dockerfile  docker-compose.yml
src/: main.py  routes.py
src/apps/healthcheck/: routes.py
src/apps/healthcheck/controllers/: health_check.py
src/apps/pokemon/: routes.py
src/apps/pokemon/controllers/: __init__.py  pokemon_detailed.py  pokemon_general.py
src/apps/pokemon/models/: __init__.py  ability.py  pokemon.py  sprite.py  type.py
src/apps/pokemon/schemas/: __init__.py  pokemon_general.py
src/apps/pokemon/schemas/pokemon_detailed/: base.py
src/apps/pokemon/schemas/pokemon_general/: api.py  base.py
src/apps/pokemon/services/: __init__.py  pokemon_general.py  pokemon_specific.py  pokemon_start.py
src/apps/pokemon/services/pokemon_general/: pokemon_general.py
src/apps/pokemon/services/pokemon_specific/: __init__.py  (+4 more)
src/commons/: fetch.py
src/lib/database/: __init__.py  base.py  dependency.py
src/lib/database/mixins/: __init__.py  active.py  timestamp.py
src/lib/error/: __init__.py  base.py
src/lib/logger/: __init__.py  base.py
src/settings/: __init__.py  base.py
tests/: conftest.py  test_base.py
tests/apps/pokemon/: test_pokemon_general.py  test_pokemon_specific.py
(+10 files in other folders)
